fixed direct modal-result overflow

--- a/apps/common/static/css/direct.css
+++ b/apps/common/static/css/direct.css
@@ -26,11 +26,12 @@ main{height: calc(100vh - 86px); border-radius: 4px; background: #fff;max-width:
   margin: auto;
   padding: 0;
   max-width: 400px; width: 100%;
-  height: 500px;
+  max-height: 500px;
   animation-name: animatetop;
   animation-duration: 0.2s;
   border-radius: 18px;
   margin-top: 135px;
+  overflow: hidden;
 }
 
 @keyframes animatetop {
@@ -53,10 +54,13 @@ button:active{opacity: .5;}
 
 .inputbox-modal{display: flex;padding-top: 14px; padding-bottom: 14px; border-bottom: solid 1px #dbdbdb;}
 .inputbox-modal input{width: calc(100% - 100px); border: unset; font-size: 16px; outline: unset;}
-h2{font-size: 14px; padding-left: 16px;padding-top: 7px;}
+h2{font-size: 14px; padding-left: 16px;padding-top: 10px;}
 
 .modal-result{
   margin-top: 10px;
+  overflow: auto;
+  height: 350px;
+  padding-bottom: 16px;
 }
 
 
